@@ -34,6 +34,7 @@
    * [What happens if I hibernate the computer while a backup is running?](#what-happens-if-i-hibernate-the-computer-while-a-backup-is-running)
    * [What happens if I power down the computer while a backup is running, or if a power outage happens?](#what-happens-if-i-power-down-the-computer-while-a-backup-is-running-or-if-a-power-outage-happens)
    * [What happens if there is not enough disk space for the current backup?](#what-happens-if-there-is-not-enough-disk-space-for-the-current-backup)
+   * [NTFS Compatability](#ntfs-compatability)
 - [user-callback and other PlugIns](#user-callback-and-other-plugins)
    * [How to backup Debian/Ubuntu Package selection?](#how-to-backup-debianubuntu-package-selection)
    * [How to restore Debian/Ubuntu Package selection?](#how-to-restore-debianubuntu-package-selection)
@@ -587,6 +588,28 @@ snapshot will be kept and marked ``With Errors`` or it will be removed.
 By default, *Back In Time* will finally remove the oldest snapshots until there is
 more than 1 GiB free space again.
 
+## NTFS Compatability
+Although devices formatted with the NTFS file system can generally be used with *Back In Time*, there are some limitations to be aware of.
+
+NTFS File systems do not support the following characters in filenames or directories:
+
+```text
+< (less than)
+> (greater than)
+: (colon)
+" (double quote)
+/ (forward slash)
+\ (backslash)
+| (vertical bar or pipe)
+? (question mark)
+* (asterisk)
+```
+
+If *Back In Time* tries to copy files where the filename contains those character, an "Invalid argument (22)" error message will be displayed.
+
+It is recommended that only devices formatted with Unix style file systems (such as ext4) be used.
+
+For more information, refer to [this Microsoft page](https://learn.microsoft.com/en-us/windows/win32/fileio/naming-a-file#naming-conventions).
 
 # user-callback and other PlugIns
 
