@@ -1,6 +1,7 @@
 Back In Time
 
 Version 1.5.3-dev (development of upcoming release)
+* Feature: Warn if destination directory is formatted as NTFS (#1854) (David Gibbs @fallingrock)
 * Breaking Change: Minimal Python version 3.9 required (#1731)
 * Breaking Change: Auto migration of config version 4 or lower not longer supported
 * Fix: Prevent duplicates in Exclude/Include list of Manage Profiles dialog
